--- a/TravellingApp/TravellingApp/package.json
+++ b/TravellingApp/TravellingApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.38",
     "expo-status-bar": "~1.12.1",
+    "html2pdf.js": "^0.10.2",
     "react": "18.2.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
