--- a/TravellingApp/TravellingApp/package.json
+++ b/TravellingApp/TravellingApp/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "^51.0.38",
     "expo-status-bar": "~1.12.1",
     "html2pdf.js": "^0.10.2",
@@ -19,10 +20,13 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-country-flag": "^2.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.1",
