--- a/TravellingApp/TravellingApp/package.json
+++ b/TravellingApp/TravellingApp/package.json
@@ -10,26 +10,33 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/bottom-tabs": "^7.0.4",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.3",
     "axios": "^1.7.7",
-    "expo": "^51.0.38",
+    "expo": "^52.0.0",
     "expo-status-bar": "~1.12.1",
     "html2pdf.js": "^0.10.2",
     "react": "18.2.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.76.2",
+    "react-native-animated-bottom-tabbar": "^1.0.2",
     "react-native-check-box": "^2.1.7",
     "react-native-country-flag": "^2.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.20.1",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-hoverable": "^0.2.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.1.0",
+    "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "travellingapp": "file:"
