--- a/TravellingApp/TravellingApp/package.json
+++ b/TravellingApp/TravellingApp/package.json
@@ -15,13 +15,13 @@
     "@react-navigation/stack": "^7.0.3",
     "axios": "^1.7.7",
     "expo": "^52.0.0",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~1.12.1",
     "html2pdf.js": "^0.10.2",
     "react": "18.2.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
     "react-native": "^0.76.2",
-    "react-native-animated-bottom-tabbar": "^1.0.2",
     "react-native-check-box": "^2.1.7",
     "react-native-country-flag": "^2.0.2",
     "react-native-country-picker-modal": "^2.0.0",
@@ -39,6 +39,7 @@
     "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
+    "react-native-web-maps": "^0.1.0",
     "travellingapp": "file:"
   },
   "devDependencies": {
